tests/ui-tests/tests/cases/rename-failures.stderr
error: Field episode does not exist on the GraphQL type Film. Did you mean created?
  --> $DIR/rename-failures.rs:10:13
   |
10 |     #[cynic(rename = "episode")]
   |             ^^^^^^
